--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Invoice Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/invoice_form.css">
+    <link rel="stylesheet" href="css/invoice_form.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/images/raanfula_logo.png" alt="Raanfula" width="210" height="70">
+                <img src="images/raanfula_logo.png" alt="Raanfula" width="210" height="70">
             </a>
         </div>
     </nav>
@@ -176,7 +176,7 @@ IFSC : IBKL0000087
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <script src="/js/invoice_form.js" defer></script>
+    <script src="js/invoice_form.js" defer></script>
 </body>
 
 </html>
